--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,37 @@
+body{
+  background-color: beige;
+}
+
+.addTaskButton{
+  background-color: rgb(18, 203, 18);
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+}
+
+input[type="text"]{
+  height: 3.5vh;
+  margin: 0.5rem 0;
+  width: 30vw;
+}
+
+input[type="button"]{
+  border-radius: 0.4rem;
+  color: white;
+  font-weight: bold;
+  height: min-content;
+  padding: 0.5rem;
+}
+
+.removeButton{
+  background-color: rgb(255, 42, 70);
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
